fix: add scrollbar padding for firefox

--- a/src/css/base.sass
+++ b/src/css/base.sass
@@ -40,6 +40,9 @@ body
     font-weight: 400
     color: $text-color
 
+    scrollbar-width: auto
+    scrollbar-color: $secondary-color $primary-color
+
 // a
 //     color: $primary-color
 //     text-decoration: none
@@ -99,6 +102,13 @@ button
         height: 1.6rem
         fill: $secondary-color
 
+.webkit-padding
+    padding-right: 0.8rem
+
+@-moz-document url-prefix() 
+  .moz-padding
+    padding-right: 1.8rem
+
 
 @media (max-width: 1240px)
     html 
@@ -148,6 +158,7 @@ button
     //     font-size: 1.7rem
 
     //     border-radius: 0.8rem
+
 
 @import components/Header
 @import components/Logo
